fix: add toggle prop, wrap MarkAttendance card in container

--- a/src/components/ClassCard.css
+++ b/src/components/ClassCard.css
@@ -1,6 +1,6 @@
 .card-class ion-card-title,ion-card-subtitle {
     margin: 0;
-    padding: 2px 0px;
+    padding: 0px 0px;
 }
 
 .card-class-icon{
@@ -34,9 +34,9 @@
     background-color: black;
 }
 
-.main-card{
+/* .main-card{
     width: 100%;
-}
+} */
 
 ion-card.main-card:hover{
     cursor: pointer;
